--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-dinky
-title: Octocat's homepage
+title: brudigia's page for DevSecOps test
 description: Bookmark this to keep an eye on my project updates!
